--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@blueprintjs/core": "^4.16.3",
+    "@blueprintjs/select": "^4.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
