feat: Build Game instead of randomly playing

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@blueprintjs/core": "^4.16.3",
     "@blueprintjs/select": "^4.9.3",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "sass": "^1.58.3"
   },
   "devDependencies": {
