--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-snowfall": "^1.2.1",
     "sass": "^1.58.3"
   },
   "devDependencies": {
