--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite": "^4.1.0"
   },
   "lint-staged": {
-    "*.{ts,tsx,css,md}": "prettier --write"
+    "*.{ts,tsx,css,md}": "prettier --write",
+    "*.{ts,tsx,css,scss,md}": "prettier --write"
   }
 }
