--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "classnames": "^2.3.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
